trabalho2/lalg/lalg.output
Terminals unused in grammar

   T_EOF
   ERR_MF_INTEGER
   ERR_MF_REAL
   ERR_MF_ID
   ERR_LONG_ID
   ERR_COMMENT
   ERR_UNKNOWN


Estado 179conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 programa: "program" programa1

    2 $@1: /* vazio */

    3 programa: error ";" $@1 corpo programa3
    4         | error "."

    5 $@2: /* vazio */

    6 programa1: "identificador" $@2 programa2

    7 $@3: /* vazio */

    8 programa1: error ";" $@3 corpo programa3
    9          | error "."

   10 programa2: ";" corpo programa3
   11          | error "."

   12 programa3: "."
   13          | error

   14 corpo: dc "begin" comandos corpo1
   15      | dc error "end"

   16 corpo1: "end"

   17 dc: dc_c dc_v dc_p

   18 dc_c: dc_c0 dc_c
   19     | /* vazio */

   20 $@4: /* vazio */

   21 dc_c0: "const" $@4 "identificador" dc_c1

   22 $@5: /* vazio */

   23 dc_c0: "const" error "=" $@5 numero ";"
   24      | "const" error ";"

   25 dc_c1: "=" dc_c2
   26      | error ";"

   27 dc_c2: numero dc_c3
   28      | error ";"

   29 dc_c3: ";"
   30      | error

   31 dc_v: dc_v0 dc_v
   32     | /* vazio */

   33 $@6: /* vazio */

   34 dc_v0: "var" variaveis $@6 ":" tipo_var dc_v1
   35      | "var" variaveis error ";"

   36 dc_v1: ";"
   37      | error

   38 tipo_var: "real"
   39         | "integer"
   40         | error

   41 variaveis: "identificador" mais_var

   42 $@7: /* vazio */

   43 variaveis: error $@7 mais_var

   44 mais_var: "," variaveis
   45         | /* vazio */

   46 $@8: /* vazio */

   47 dc_p: dc_p0 $@8 dc_p
   48     | /* vazio */

   49 $@9: /* vazio */

   50 $@10: /* vazio */

   51 dc_p0: "procedure" $@9 "identificador" parametros $@10 dc_p1

   52 $@11: /* vazio */

   53 dc_p0: "procedure" error ";" $@11 corpo_p

   54 dc_p1: ";" corpo_p

   55 $@12: /* vazio */

   56 dc_p1: error $@12 corpo_p

   57 parametros: "(" lista_par ")"
   58           | "(" lista_par error
   59           | /* vazio */

   60 lista_par: variaveis ":" tipo_var mais_par

   61 mais_par: ";" lista_par
   62         | /* vazio */

   63 corpo_p: dc_loc "begin" comandos corpo_p1

   64 $@13: /* vazio */

   65 corpo_p: dc_loc error "end" $@13 corpo_p2
   66        | dc_loc error ";"

   67 corpo_p1: "end" corpo_p2
   68         | error ";"

   69 corpo_p2: ";"
   70         | error

   71 dc_loc: dc_v

   72 lista_arg: "(" argumentos ")"
   73          | "(" argumentos error
   74          | /* vazio */

   75 argumentos: "identificador" mais_ident

   76 $@14: /* vazio */

   77 argumentos: error $@14 mais_ident

   78 mais_ident: ";" argumentos
   79           | /* vazio */

   80 $@15: /* vazio */

   81 pfalsa: "else" $@15 cmd
   82       | /* vazio */

   83 comandos: cmd ";" comandos
   84         | /* vazio */

   85 $@16: /* vazio */

   86 cmd: "read" $@16 cmd_param

   87 $@17: /* vazio */

   88 cmd: "write" $@17 cmd_param

   89 $@18: /* vazio */

   90 cmd: "if" $@18 cmd_if

   91 $@19: /* vazio */

   92 cmd: "identificador" $@19 ":=" expressao

   93 $@20: /* vazio */

   94 cmd: "identificador" $@20 lista_arg
   95    | "begin" cmd_begin

   96 $@21: /* vazio */

   97 cmd: "while" $@21 cmd_while

   98 $@22: /* vazio */

   99 $@23: /* vazio */

  100 cmd: "for" $@22 "identificador" $@23 ":=" expressao "to" expressao "do" cmd

  101 cmd_param: "(" variaveis ")"

  102 $@24: /* vazio */

  103 cmd_if: condicao "then" $@24 cmd pfalsa

  104 cmd_begin: comandos "end"

  105 $@25: /* vazio */

  106 cmd_while: "(" condicao ")" "do" $@25 cmd

  107 condicao: expressao relacao expressao

  108 relacao: "="
  109        | "<>"
  110        | ">="
  111        | "<="
  112        | ">"
  113        | "<"
  114        | error

  115 expressao: termo outros_termos

  116 op_un: "+"
  117      | "-"
  118      | /* vazio */

  119 outros_termos: op_ad termo outros_termos
  120              | /* vazio */

  121 op_ad: "+"
  122      | "-"

  123 termo: op_un fator mais_fatores

  124 mais_fatores: op_mul fator mais_fatores
  125             | /* vazio */

  126 op_mul: "*"
  127       | "/"

  128 fator: "identificador"
  129      | numero
  130      | "(" fator_exp
  131      | error

  132 fator_exp: expressao ")"
  133          | expressao error

  134 numero: "numero inteiro"
  135       | "numero real"


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256) 3 4 8 9 11 13 15 23 24 26 28 30 35 37 40 43 53 56 58 65
    66 68 70 73 77 114 131 133
T_EOF (258)
"program" (259) 1
"begin" (260) 14 63 95
"end" (261) 15 16 65 67 104
"var" (262) 34 35
"const" (263) 21 23 24
"real" (264) 38
"integer" (265) 39
"procedure" (266) 51 53
"read" (267) 86
"write" (268) 88
"while" (269) 97
"if" (270) 90
"then" (271) 103
"else" (272) 81
"for" (273) 100
"to" (274) 100
"do" (275) 100 106
"=" (276) 23 25 108
"<>" (277) 109
">=" (278) 110
"<=" (279) 111
">" (280) 112
"<" (281) 113
"+" (282) 116 121
"-" (283) 117 122
"*" (284) 126
"/" (285) 127
":=" (286) 92 100
";" (287) 3 8 10 23 24 26 28 29 35 36 53 54 61 66 68 69 78 83
":" (288) 34 60
"(" (289) 57 58 72 73 101 106 130
")" (290) 57 72 101 106 132
"," (291) 44
"." (292) 4 9 11 12
ERR_MF_INTEGER (293)
ERR_MF_REAL (294)
ERR_MF_ID (295)
ERR_LONG_ID (296)
ERR_COMMENT (297)
ERR_UNKNOWN (298)
"identificador" (299) 6 21 41 51 75 92 94 100 128
"numero inteiro" (300) 134
"numero real" (301) 135


Não-terminais com as regras onde eles aparecem

$accept (47)
    à esquerda: 0
programa (48)
    à esquerda: 1 3 4, à direita: 0
$@1 (49)
    à esquerda: 2, à direita: 3
programa1 (50)
    à esquerda: 6 8 9, à direita: 1
$@2 (51)
    à esquerda: 5, à direita: 6
$@3 (52)
    à esquerda: 7, à direita: 8
programa2 (53)
    à esquerda: 10 11, à direita: 6
programa3 (54)
    à esquerda: 12 13, à direita: 3 8 10
corpo (55)
    à esquerda: 14 15, à direita: 3 8 10
corpo1 (56)
    à esquerda: 16, à direita: 14
dc (57)
    à esquerda: 17, à direita: 14 15
dc_c (58)
    à esquerda: 18 19, à direita: 17 18
dc_c0 (59)
    à esquerda: 21 23 24, à direita: 18
$@4 (60)
    à esquerda: 20, à direita: 21
$@5 (61)
    à esquerda: 22, à direita: 23
dc_c1 (62)
    à esquerda: 25 26, à direita: 21
dc_c2 (63)
    à esquerda: 27 28, à direita: 25
dc_c3 (64)
    à esquerda: 29 30, à direita: 27
dc_v (65)
    à esquerda: 31 32, à direita: 17 31 71
dc_v0 (66)
    à esquerda: 34 35, à direita: 31
$@6 (67)
    à esquerda: 33, à direita: 34
dc_v1 (68)
    à esquerda: 36 37, à direita: 34
tipo_var (69)
    à esquerda: 38 39 40, à direita: 34 60
variaveis (70)
    à esquerda: 41 43, à direita: 34 35 44 60 101
$@7 (71)
    à esquerda: 42, à direita: 43
mais_var (72)
    à esquerda: 44 45, à direita: 41 43
dc_p (73)
    à esquerda: 47 48, à direita: 17 47
$@8 (74)
    à esquerda: 46, à direita: 47
dc_p0 (75)
    à esquerda: 51 53, à direita: 47
$@9 (76)
    à esquerda: 49, à direita: 51
$@10 (77)
    à esquerda: 50, à direita: 51
$@11 (78)
    à esquerda: 52, à direita: 53
dc_p1 (79)
    à esquerda: 54 56, à direita: 51
$@12 (80)
    à esquerda: 55, à direita: 56
parametros (81)
    à esquerda: 57 58 59, à direita: 51
lista_par (82)
    à esquerda: 60, à direita: 57 58 61
mais_par (83)
    à esquerda: 61 62, à direita: 60
corpo_p (84)
    à esquerda: 63 65 66, à direita: 53 54 56
$@13 (85)
    à esquerda: 64, à direita: 65
corpo_p1 (86)
    à esquerda: 67 68, à direita: 63
corpo_p2 (87)
    à esquerda: 69 70, à direita: 65 67
dc_loc (88)
    à esquerda: 71, à direita: 63 65 66
lista_arg (89)
    à esquerda: 72 73 74, à direita: 94
argumentos (90)
    à esquerda: 75 77, à direita: 72 73 78
$@14 (91)
    à esquerda: 76, à direita: 77
mais_ident (92)
    à esquerda: 78 79, à direita: 75 77
pfalsa (93)
    à esquerda: 81 82, à direita: 103
$@15 (94)
    à esquerda: 80, à direita: 81
comandos (95)
    à esquerda: 83 84, à direita: 14 63 83 104
cmd (96)
    à esquerda: 86 88 90 92 94 95 97 100, à direita: 81 83 100 103
    106
$@16 (97)
    à esquerda: 85, à direita: 86
$@17 (98)
    à esquerda: 87, à direita: 88
$@18 (99)
    à esquerda: 89, à direita: 90
$@19 (100)
    à esquerda: 91, à direita: 92
$@20 (101)
    à esquerda: 93, à direita: 94
$@21 (102)
    à esquerda: 96, à direita: 97
$@22 (103)
    à esquerda: 98, à direita: 100
$@23 (104)
    à esquerda: 99, à direita: 100
cmd_param (105)
    à esquerda: 101, à direita: 86 88
cmd_if (106)
    à esquerda: 103, à direita: 90
$@24 (107)
    à esquerda: 102, à direita: 103
cmd_begin (108)
    à esquerda: 104, à direita: 95
cmd_while (109)
    à esquerda: 106, à direita: 97
$@25 (110)
    à esquerda: 105, à direita: 106
condicao (111)
    à esquerda: 107, à direita: 103 106
relacao (112)
    à esquerda: 108 109 110 111 112 113 114, à direita: 107
expressao (113)
    à esquerda: 115, à direita: 92 100 107 132 133
op_un (114)
    à esquerda: 116 117 118, à direita: 123
outros_termos (115)
    à esquerda: 119 120, à direita: 115 119
op_ad (116)
    à esquerda: 121 122, à direita: 119
termo (117)
    à esquerda: 123, à direita: 115 119
mais_fatores (118)
    à esquerda: 124 125, à direita: 123 124
op_mul (119)
    à esquerda: 126 127, à direita: 124
fator (120)
    à esquerda: 128 129 130 131, à direita: 123 124
fator_exp (121)
    à esquerda: 132 133, à direita: 130
numero (122)
    à esquerda: 134 135, à direita: 23 27 129


estado 0

    0 $accept: . programa $end

    error      deslocar, e ir ao estado 1
    "program"  deslocar, e ir ao estado 2

    programa  ir ao estado 3


estado 1

    3 programa: error . ";" $@1 corpo programa3
    4         | error . "."

    ";"  deslocar, e ir ao estado 4
    "."  deslocar, e ir ao estado 5


estado 2

    1 programa: "program" . programa1

    error            deslocar, e ir ao estado 6
    "identificador"  deslocar, e ir ao estado 7

    programa1  ir ao estado 8


estado 3

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 9


estado 4

    3 programa: error ";" . $@1 corpo programa3

    $padrão  reduzir usando a regra 2 ($@1)

    $@1  ir ao estado 10


estado 5

    4 programa: error "." .

    $padrão  reduzir usando a regra 4 (programa)


estado 6

    8 programa1: error . ";" $@3 corpo programa3
    9          | error . "."

    ";"  deslocar, e ir ao estado 11
    "."  deslocar, e ir ao estado 12


estado 7

    6 programa1: "identificador" . $@2 programa2

    $padrão  reduzir usando a regra 5 ($@2)

    $@2  ir ao estado 13


estado 8

    1 programa: "program" programa1 .

    $padrão  reduzir usando a regra 1 (programa)


estado 9

    0 $accept: programa $end .

    $padrão  aceitar


estado 10

    3 programa: error ";" $@1 . corpo programa3

    "const"  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 19 (dc_c)

    corpo  ir ao estado 15
    dc     ir ao estado 16
    dc_c   ir ao estado 17
    dc_c0  ir ao estado 18


estado 11

    8 programa1: error ";" . $@3 corpo programa3

    $padrão  reduzir usando a regra 7 ($@3)

    $@3  ir ao estado 19


estado 12

    9 programa1: error "." .

    $padrão  reduzir usando a regra 9 (programa1)


estado 13

    6 programa1: "identificador" $@2 . programa2

    error  deslocar, e ir ao estado 20
    ";"    deslocar, e ir ao estado 21

    programa2  ir ao estado 22


estado 14

   21 dc_c0: "const" . $@4 "identificador" dc_c1
   23      | "const" . error "=" $@5 numero ";"
   24      | "const" . error ";"

    error  deslocar, e ir ao estado 23

    "identificador"  reduzir usando a regra 20 ($@4)

    $@4  ir ao estado 24


estado 15

    3 programa: error ";" $@1 corpo . programa3

    error  deslocar, e ir ao estado 25
    "."    deslocar, e ir ao estado 26

    programa3  ir ao estado 27


estado 16

   14 corpo: dc . "begin" comandos corpo1
   15      | dc . error "end"

    error    deslocar, e ir ao estado 28
    "begin"  deslocar, e ir ao estado 29


estado 17

   17 dc: dc_c . dc_v dc_p

    "var"  deslocar, e ir ao estado 30

    $padrão  reduzir usando a regra 32 (dc_v)

    dc_v   ir ao estado 31
    dc_v0  ir ao estado 32


estado 18

   18 dc_c: dc_c0 . dc_c

    "const"  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 19 (dc_c)

    dc_c   ir ao estado 33
    dc_c0  ir ao estado 18


estado 19

    8 programa1: error ";" $@3 . corpo programa3

    "const"  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 19 (dc_c)

    corpo  ir ao estado 34
    dc     ir ao estado 16
    dc_c   ir ao estado 17
    dc_c0  ir ao estado 18


estado 20

   11 programa2: error . "."

    "."  deslocar, e ir ao estado 35


estado 21

   10 programa2: ";" . corpo programa3

    "const"  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 19 (dc_c)

    corpo  ir ao estado 36
    dc     ir ao estado 16
    dc_c   ir ao estado 17
    dc_c0  ir ao estado 18


estado 22

    6 programa1: "identificador" $@2 programa2 .

    $padrão  reduzir usando a regra 6 (programa1)


estado 23

   23 dc_c0: "const" error . "=" $@5 numero ";"
   24      | "const" error . ";"

    "="  deslocar, e ir ao estado 37
    ";"  deslocar, e ir ao estado 38


estado 24

   21 dc_c0: "const" $@4 . "identificador" dc_c1

    "identificador"  deslocar, e ir ao estado 39


estado 25

   13 programa3: error .

    $padrão  reduzir usando a regra 13 (programa3)


estado 26

   12 programa3: "." .

    $padrão  reduzir usando a regra 12 (programa3)


estado 27

    3 programa: error ";" $@1 corpo programa3 .

    $padrão  reduzir usando a regra 3 (programa)


estado 28

   15 corpo: dc error . "end"

    "end"  deslocar, e ir ao estado 40


estado 29

   14 corpo: dc "begin" . comandos corpo1

    "begin"          deslocar, e ir ao estado 41
    "read"           deslocar, e ir ao estado 42
    "write"          deslocar, e ir ao estado 43
    "while"          deslocar, e ir ao estado 44
    "if"             deslocar, e ir ao estado 45
    "for"            deslocar, e ir ao estado 46
    "identificador"  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 84 (comandos)

    comandos  ir ao estado 48
    cmd       ir ao estado 49


estado 30

   34 dc_v0: "var" . variaveis $@6 ":" tipo_var dc_v1
   35      | "var" . variaveis error ";"

    error            deslocar, e ir ao estado 50
    "identificador"  deslocar, e ir ao estado 51

    variaveis  ir ao estado 52


estado 31

   17 dc: dc_c dc_v . dc_p

    "procedure"  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 48 (dc_p)

    dc_p   ir ao estado 54
    dc_p0  ir ao estado 55


estado 32

   31 dc_v: dc_v0 . dc_v

    "var"  deslocar, e ir ao estado 30

    $padrão  reduzir usando a regra 32 (dc_v)

    dc_v   ir ao estado 56
    dc_v0  ir ao estado 32


estado 33

   18 dc_c: dc_c0 dc_c .

    $padrão  reduzir usando a regra 18 (dc_c)


estado 34

    8 programa1: error ";" $@3 corpo . programa3

    error  deslocar, e ir ao estado 25
    "."    deslocar, e ir ao estado 26

    programa3  ir ao estado 57


estado 35

   11 programa2: error "." .

    $padrão  reduzir usando a regra 11 (programa2)


estado 36

   10 programa2: ";" corpo . programa3

    error  deslocar, e ir ao estado 25
    "."    deslocar, e ir ao estado 26

    programa3  ir ao estado 58


estado 37

   23 dc_c0: "const" error "=" . $@5 numero ";"

    $padrão  reduzir usando a regra 22 ($@5)

    $@5  ir ao estado 59


estado 38

   24 dc_c0: "const" error ";" .

    $padrão  reduzir usando a regra 24 (dc_c0)


estado 39

   21 dc_c0: "const" $@4 "identificador" . dc_c1

    error  deslocar, e ir ao estado 60
    "="    deslocar, e ir ao estado 61

    dc_c1  ir ao estado 62


estado 40

   15 corpo: dc error "end" .

    $padrão  reduzir usando a regra 15 (corpo)


estado 41

   95 cmd: "begin" . cmd_begin

    "begin"          deslocar, e ir ao estado 41
    "read"           deslocar, e ir ao estado 42
    "write"          deslocar, e ir ao estado 43
    "while"          deslocar, e ir ao estado 44
    "if"             deslocar, e ir ao estado 45
    "for"            deslocar, e ir ao estado 46
    "identificador"  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 84 (comandos)

    comandos   ir ao estado 63
    cmd        ir ao estado 49
    cmd_begin  ir ao estado 64


estado 42

   86 cmd: "read" . $@16 cmd_param

    $padrão  reduzir usando a regra 85 ($@16)

    $@16  ir ao estado 65


estado 43

   88 cmd: "write" . $@17 cmd_param

    $padrão  reduzir usando a regra 87 ($@17)

    $@17  ir ao estado 66


estado 44

   97 cmd: "while" . $@21 cmd_while

    $padrão  reduzir usando a regra 96 ($@21)

    $@21  ir ao estado 67


estado 45

   90 cmd: "if" . $@18 cmd_if

    $padrão  reduzir usando a regra 89 ($@18)

    $@18  ir ao estado 68


estado 46

  100 cmd: "for" . $@22 "identificador" $@23 ":=" expressao "to" expressao "do" cmd

    $padrão  reduzir usando a regra 98 ($@22)

    $@22  ir ao estado 69


estado 47

   92 cmd: "identificador" . $@19 ":=" expressao
   94    | "identificador" . $@20 lista_arg

    ":="      reduzir usando a regra 91 ($@19)
    $padrão  reduzir usando a regra 93 ($@20)

    $@19  ir ao estado 70
    $@20  ir ao estado 71


estado 48

   14 corpo: dc "begin" comandos . corpo1

    "end"  deslocar, e ir ao estado 72

    corpo1  ir ao estado 73


estado 49

   83 comandos: cmd . ";" comandos

    ";"  deslocar, e ir ao estado 74


estado 50

   43 variaveis: error . $@7 mais_var

    $padrão  reduzir usando a regra 42 ($@7)

    $@7  ir ao estado 75


estado 51

   41 variaveis: "identificador" . mais_var

    ","  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 45 (mais_var)

    mais_var  ir ao estado 77


estado 52

   34 dc_v0: "var" variaveis . $@6 ":" tipo_var dc_v1
   35      | "var" variaveis . error ";"

    error  deslocar, e ir ao estado 78

    ":"  reduzir usando a regra 33 ($@6)

    $@6  ir ao estado 79


estado 53

   51 dc_p0: "procedure" . $@9 "identificador" parametros $@10 dc_p1
   53      | "procedure" . error ";" $@11 corpo_p

    error  deslocar, e ir ao estado 80

    "identificador"  reduzir usando a regra 49 ($@9)

    $@9  ir ao estado 81


estado 54

   17 dc: dc_c dc_v dc_p .

    $padrão  reduzir usando a regra 17 (dc)


estado 55

   47 dc_p: dc_p0 . $@8 dc_p

    $padrão  reduzir usando a regra 46 ($@8)

    $@8  ir ao estado 82


estado 56

   31 dc_v: dc_v0 dc_v .

    $padrão  reduzir usando a regra 31 (dc_v)


estado 57

    8 programa1: error ";" $@3 corpo programa3 .

    $padrão  reduzir usando a regra 8 (programa1)


estado 58

   10 programa2: ";" corpo programa3 .

    $padrão  reduzir usando a regra 10 (programa2)


estado 59

   23 dc_c0: "const" error "=" $@5 . numero ";"

    "numero inteiro"  deslocar, e ir ao estado 83
    "numero real"     deslocar, e ir ao estado 84

    numero  ir ao estado 85


estado 60

   26 dc_c1: error . ";"

    ";"  deslocar, e ir ao estado 86


estado 61

   25 dc_c1: "=" . dc_c2

    error             deslocar, e ir ao estado 87
    "numero inteiro"  deslocar, e ir ao estado 83
    "numero real"     deslocar, e ir ao estado 84

    dc_c2   ir ao estado 88
    numero  ir ao estado 89


estado 62

   21 dc_c0: "const" $@4 "identificador" dc_c1 .

    $padrão  reduzir usando a regra 21 (dc_c0)


estado 63

  104 cmd_begin: comandos . "end"

    "end"  deslocar, e ir ao estado 90


estado 64

   95 cmd: "begin" cmd_begin .

    $padrão  reduzir usando a regra 95 (cmd)


estado 65

   86 cmd: "read" $@16 . cmd_param

    "("  deslocar, e ir ao estado 91

    cmd_param  ir ao estado 92


estado 66

   88 cmd: "write" $@17 . cmd_param

    "("  deslocar, e ir ao estado 91

    cmd_param  ir ao estado 93


estado 67

   97 cmd: "while" $@21 . cmd_while

    "("  deslocar, e ir ao estado 94

    cmd_while  ir ao estado 95


estado 68

   90 cmd: "if" $@18 . cmd_if

    "+"  deslocar, e ir ao estado 96
    "-"  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 118 (op_un)

    cmd_if     ir ao estado 98
    condicao   ir ao estado 99
    expressao  ir ao estado 100
    op_un      ir ao estado 101
    termo      ir ao estado 102


estado 69

  100 cmd: "for" $@22 . "identificador" $@23 ":=" expressao "to" expressao "do" cmd

    "identificador"  deslocar, e ir ao estado 103


estado 70

   92 cmd: "identificador" $@19 . ":=" expressao

    ":="  deslocar, e ir ao estado 104


estado 71

   94 cmd: "identificador" $@20 . lista_arg

    "("  deslocar, e ir ao estado 105

    $padrão  reduzir usando a regra 74 (lista_arg)

    lista_arg  ir ao estado 106


estado 72

   16 corpo1: "end" .

    $padrão  reduzir usando a regra 16 (corpo1)


estado 73

   14 corpo: dc "begin" comandos corpo1 .

    $padrão  reduzir usando a regra 14 (corpo)


estado 74

   83 comandos: cmd ";" . comandos

    "begin"          deslocar, e ir ao estado 41
    "read"           deslocar, e ir ao estado 42
    "write"          deslocar, e ir ao estado 43
    "while"          deslocar, e ir ao estado 44
    "if"             deslocar, e ir ao estado 45
    "for"            deslocar, e ir ao estado 46
    "identificador"  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 84 (comandos)

    comandos  ir ao estado 107
    cmd       ir ao estado 49


estado 75

   43 variaveis: error $@7 . mais_var

    ","  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 45 (mais_var)

    mais_var  ir ao estado 108


estado 76

   44 mais_var: "," . variaveis

    error            deslocar, e ir ao estado 50
    "identificador"  deslocar, e ir ao estado 51

    variaveis  ir ao estado 109


estado 77

   41 variaveis: "identificador" mais_var .

    $padrão  reduzir usando a regra 41 (variaveis)


estado 78

   35 dc_v0: "var" variaveis error . ";"

    ";"  deslocar, e ir ao estado 110


estado 79

   34 dc_v0: "var" variaveis $@6 . ":" tipo_var dc_v1

    ":"  deslocar, e ir ao estado 111


estado 80

   53 dc_p0: "procedure" error . ";" $@11 corpo_p

    ";"  deslocar, e ir ao estado 112


estado 81

   51 dc_p0: "procedure" $@9 . "identificador" parametros $@10 dc_p1

    "identificador"  deslocar, e ir ao estado 113


estado 82

   47 dc_p: dc_p0 $@8 . dc_p

    "procedure"  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 48 (dc_p)

    dc_p   ir ao estado 114
    dc_p0  ir ao estado 55


estado 83

  134 numero: "numero inteiro" .

    $padrão  reduzir usando a regra 134 (numero)


estado 84

  135 numero: "numero real" .

    $padrão  reduzir usando a regra 135 (numero)


estado 85

   23 dc_c0: "const" error "=" $@5 numero . ";"

    ";"  deslocar, e ir ao estado 115


estado 86

   26 dc_c1: error ";" .

    $padrão  reduzir usando a regra 26 (dc_c1)


estado 87

   28 dc_c2: error . ";"

    ";"  deslocar, e ir ao estado 116


estado 88

   25 dc_c1: "=" dc_c2 .

    $padrão  reduzir usando a regra 25 (dc_c1)


estado 89

   27 dc_c2: numero . dc_c3

    error  deslocar, e ir ao estado 117
    ";"    deslocar, e ir ao estado 118

    dc_c3  ir ao estado 119


estado 90

  104 cmd_begin: comandos "end" .

    $padrão  reduzir usando a regra 104 (cmd_begin)


estado 91

  101 cmd_param: "(" . variaveis ")"

    error            deslocar, e ir ao estado 50
    "identificador"  deslocar, e ir ao estado 51

    variaveis  ir ao estado 120


estado 92

   86 cmd: "read" $@16 cmd_param .

    $padrão  reduzir usando a regra 86 (cmd)


estado 93

   88 cmd: "write" $@17 cmd_param .

    $padrão  reduzir usando a regra 88 (cmd)


estado 94

  106 cmd_while: "(" . condicao ")" "do" $@25 cmd

    "+"  deslocar, e ir ao estado 96
    "-"  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 118 (op_un)

    condicao   ir ao estado 121
    expressao  ir ao estado 100
    op_un      ir ao estado 101
    termo      ir ao estado 102


estado 95

   97 cmd: "while" $@21 cmd_while .

    $padrão  reduzir usando a regra 97 (cmd)


estado 96

  116 op_un: "+" .

    $padrão  reduzir usando a regra 116 (op_un)


estado 97

  117 op_un: "-" .

    $padrão  reduzir usando a regra 117 (op_un)


estado 98

   90 cmd: "if" $@18 cmd_if .

    $padrão  reduzir usando a regra 90 (cmd)


estado 99

  103 cmd_if: condicao . "then" $@24 cmd pfalsa

    "then"  deslocar, e ir ao estado 122


estado 100

  107 condicao: expressao . relacao expressao

    error  deslocar, e ir ao estado 123
    "="    deslocar, e ir ao estado 124
    "<>"   deslocar, e ir ao estado 125
    ">="   deslocar, e ir ao estado 126
    "<="   deslocar, e ir ao estado 127
    ">"    deslocar, e ir ao estado 128
    "<"    deslocar, e ir ao estado 129

    relacao  ir ao estado 130


estado 101

  123 termo: op_un . fator mais_fatores

    error             deslocar, e ir ao estado 131
    "("               deslocar, e ir ao estado 132
    "identificador"   deslocar, e ir ao estado 133
    "numero inteiro"  deslocar, e ir ao estado 83
    "numero real"     deslocar, e ir ao estado 84

    fator   ir ao estado 134
    numero  ir ao estado 135


estado 102

  115 expressao: termo . outros_termos

    "+"  deslocar, e ir ao estado 136
    "-"  deslocar, e ir ao estado 137

    $padrão  reduzir usando a regra 120 (outros_termos)

    outros_termos  ir ao estado 138
    op_ad          ir ao estado 139


estado 103

  100 cmd: "for" $@22 "identificador" . $@23 ":=" expressao "to" expressao "do" cmd

    $padrão  reduzir usando a regra 99 ($@23)

    $@23  ir ao estado 140


estado 104

   92 cmd: "identificador" $@19 ":=" . expressao

    "+"  deslocar, e ir ao estado 96
    "-"  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 118 (op_un)

    expressao  ir ao estado 141
    op_un      ir ao estado 101
    termo      ir ao estado 102


estado 105

   72 lista_arg: "(" . argumentos ")"
   73          | "(" . argumentos error

    error            deslocar, e ir ao estado 142
    "identificador"  deslocar, e ir ao estado 143

    argumentos  ir ao estado 144


estado 106

   94 cmd: "identificador" $@20 lista_arg .

    $padrão  reduzir usando a regra 94 (cmd)


estado 107

   83 comandos: cmd ";" comandos .

    $padrão  reduzir usando a regra 83 (comandos)


estado 108

   43 variaveis: error $@7 mais_var .

    $padrão  reduzir usando a regra 43 (variaveis)


estado 109

   44 mais_var: "," variaveis .

    $padrão  reduzir usando a regra 44 (mais_var)


estado 110

   35 dc_v0: "var" variaveis error ";" .

    $padrão  reduzir usando a regra 35 (dc_v0)


estado 111

   34 dc_v0: "var" variaveis $@6 ":" . tipo_var dc_v1

    error      deslocar, e ir ao estado 145
    "real"     deslocar, e ir ao estado 146
    "integer"  deslocar, e ir ao estado 147

    tipo_var  ir ao estado 148


estado 112

   53 dc_p0: "procedure" error ";" . $@11 corpo_p

    $padrão  reduzir usando a regra 52 ($@11)

    $@11  ir ao estado 149


estado 113

   51 dc_p0: "procedure" $@9 "identificador" . parametros $@10 dc_p1

    "("  deslocar, e ir ao estado 150

    $padrão  reduzir usando a regra 59 (parametros)

    parametros  ir ao estado 151


estado 114

   47 dc_p: dc_p0 $@8 dc_p .

    $padrão  reduzir usando a regra 47 (dc_p)


estado 115

   23 dc_c0: "const" error "=" $@5 numero ";" .

    $padrão  reduzir usando a regra 23 (dc_c0)


estado 116

   28 dc_c2: error ";" .

    $padrão  reduzir usando a regra 28 (dc_c2)


estado 117

   30 dc_c3: error .

    $padrão  reduzir usando a regra 30 (dc_c3)


estado 118

   29 dc_c3: ";" .

    $padrão  reduzir usando a regra 29 (dc_c3)


estado 119

   27 dc_c2: numero dc_c3 .

    $padrão  reduzir usando a regra 27 (dc_c2)


estado 120

  101 cmd_param: "(" variaveis . ")"

    ")"  deslocar, e ir ao estado 152


estado 121

  106 cmd_while: "(" condicao . ")" "do" $@25 cmd

    ")"  deslocar, e ir ao estado 153


estado 122

  103 cmd_if: condicao "then" . $@24 cmd pfalsa

    $padrão  reduzir usando a regra 102 ($@24)

    $@24  ir ao estado 154


estado 123

  114 relacao: error .

    $padrão  reduzir usando a regra 114 (relacao)


estado 124

  108 relacao: "=" .

    $padrão  reduzir usando a regra 108 (relacao)


estado 125

  109 relacao: "<>" .

    $padrão  reduzir usando a regra 109 (relacao)


estado 126

  110 relacao: ">=" .

    $padrão  reduzir usando a regra 110 (relacao)


estado 127

  111 relacao: "<=" .

    $padrão  reduzir usando a regra 111 (relacao)


estado 128

  112 relacao: ">" .

    $padrão  reduzir usando a regra 112 (relacao)


estado 129

  113 relacao: "<" .

    $padrão  reduzir usando a regra 113 (relacao)


estado 130

  107 condicao: expressao relacao . expressao

    "+"  deslocar, e ir ao estado 96
    "-"  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 118 (op_un)

    expressao  ir ao estado 155
    op_un      ir ao estado 101
    termo      ir ao estado 102


estado 131

  131 fator: error .

    $padrão  reduzir usando a regra 131 (fator)


estado 132

  130 fator: "(" . fator_exp

    "+"  deslocar, e ir ao estado 96
    "-"  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 118 (op_un)

    expressao  ir ao estado 156
    op_un      ir ao estado 101
    termo      ir ao estado 102
    fator_exp  ir ao estado 157


estado 133

  128 fator: "identificador" .

    $padrão  reduzir usando a regra 128 (fator)


estado 134

  123 termo: op_un fator . mais_fatores

    "*"  deslocar, e ir ao estado 158
    "/"  deslocar, e ir ao estado 159

    $padrão  reduzir usando a regra 125 (mais_fatores)

    mais_fatores  ir ao estado 160
    op_mul        ir ao estado 161


estado 135

  129 fator: numero .

    $padrão  reduzir usando a regra 129 (fator)


estado 136

  121 op_ad: "+" .

    $padrão  reduzir usando a regra 121 (op_ad)


estado 137

  122 op_ad: "-" .
